--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Eve-of-the-Revolution--A-Chronicle-of-the-Breach-with-England_3093
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Becker, Carl L. (Carl Lotus)
@@ -16,6 +19,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1084
     wikipedia: http://en.wikipedia.org/wiki/Allen_Johnson_(historian)
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3093#The-Eve-of-the-Revolution--A-Chronicle-of-the-Breach-with-England
 gutenberg_bookshelf:
 - Children's History
 - United States
